update API for FetchP2PNetworkInfo, ReportResource and ReportResourceDeleted
